name:                unpdf
version:             0.1.0.0
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
build-type:          Simple
cabal-version:       >=1.10

executable unpdf
  main-is:             Main.hs
  build-depends:       base >=4.6,
                       pdf-toolbox-document,
                       optparse-applicative,
                       text
  default-language:    Haskell2010
